--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,6 @@
+@import './abstract/minxins';
+@import './abstract/variables';
+
 * {
   padding: 0;
   margin: 0;
@@ -16,6 +19,7 @@
   font-size: 1.1rem;
   position: sticky;
   z-index: 99;
+  font-family: $font-inter;
 
   a {
     text-decoration: none;
@@ -40,68 +44,104 @@
   }
 }
 
-.main {
-  background-color: #204f42;
-  height: 100vh;
-  margin-top: -50px;
-  display: grid;
-  // align-items: center;
-  grid-template-rows: 1fr 300px;
+.container {
+  position: relative;
 
-  &-sec1 {
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    align-items: center;
+  &-bmo {
+    position: absolute;
+    z-index: 9;
+    width: 100%;
+    height: 100%;
 
-    &-information {
-      width: 50%;
-      place-self: center;
+    .spline {
+      height: 100% !important;
 
-      h1 {
-        color: #FFF;
-        font-size: 2.7rem;
-      }
-
-      h3 {
-        font-size: 2rem;
-        color: #79cfb0;
-      }
-
-      p {
-        color: #d5f2e6;
-      }
-    }
-
-    &-image {
-      background-color: #1e4338;
-      width: 400px;
-      height: 350px;
-      border-radius: 50%;
-      position: relative;
-
-      img {
-        width: 100%;
-        position: absolute;
-        bottom: 0px;
-        left: 0px;
-        border-radius: 47%;
+      div {
+        canvas {
+          padding-top: 55px;
+        }
       }
     }
   }
 
-  &-sec2 {
+  &-main {
+    background-color: #204f42;
+    height: 100vh;
+    margin-top: -50px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    width: 60%;
-    margin: 0 auto;
-    justify-items: center;
+    // align-items: center;
+    grid-template-rows: 1fr 300px;
+    position: relative;
 
-    img {
-      width: 50px;
+    &-sec1 {
+      display: grid;
+      grid-template-columns: 3fr 2fr;
+      align-items: center;
+
+      &-information {
+        width: 50%;
+        place-self: center;
+
+        h1 {
+          color: #FFF;
+          font-size: 2.7rem;
+        }
+
+        h3 {
+          font-size: 2rem;
+          color: #79cfb0;
+        }
+
+        p {
+          color: #d5f2e6;
+        }
+      }
+
+      &-bmo {
+        .spline {
+          background-color: transparent !important;
+          width: 100%;
+          height: 100vh;
+
+        }
+      }
+
+      &-image {
+        background-color: #1e4338;
+        width: 400px;
+        height: 350px;
+        border-radius: 50%;
+        position: relative;
+
+        img {
+          width: 100%;
+          position: absolute;
+          bottom: 0px;
+          left: 0px;
+          border-radius: 47%;
+        }
+      }
+    }
+
+    &-sec2 {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      width: 60%;
+      margin: 0 auto;
+      justify-items: center;
+
+      a {
+        z-index: 999;
+        height: 50px;
+
+        img {
+          width: 50px;
+        }
+      }
+
     }
 
   }
-
 }
 
 .tooling {
@@ -431,4 +471,88 @@
   -webkit-filter: grayscale(50%) contrast(80%) brightness(1.6);
   filter: grayscale(50%) contrast(80%) brightness(1.6);
   mix-blend-mode: normal;
+}
+
+.experience {
+  background-color: #034941;
+  display: grid;
+  // height: 100vh;
+  height: auto;
+  grid-template-rows: 130px 1fr;
+
+  h2 {
+    color: #FFF;
+    display: grid;
+    place-content: center;
+  }
+
+  &-timeline {
+    width: 80%;
+    place-self: center;
+  }
+}
+
+.devkoore {
+  height: 60px;
+  width: 60px;
+
+  &-svg {
+    width: 58px !important;
+    height: 58px !important;
+    margin-left: -29px !important;
+    margin-top: -29px !important;
+
+    @include tablet() {
+      width: 43px !important;
+      height: 43px !important;
+      margin-left: -32px !important;
+      margin-top: -30px !important;
+    }
+  }
+}
+
+.virtua {
+  height: 60px;
+  width: 60px;
+
+  &-svg {
+    width: 35px !important;
+    height: 35px !important;
+    margin-left: -17px !important;
+    margin-top: -17px !important;
+
+    @include tablet() {
+      width: 27px !important;
+      height: 27px !important;
+      margin-left: -23px !important;
+      margin-top: -23px !important;
+    }
+  }
+}
+
+.update {
+  height: 60px;
+  width: 60px;
+
+  &-svg {
+    width: 80px !important;
+    height: 80px !important;
+    margin-left: -40px !important;
+    margin-top: -40px !important;
+
+    @include tablet() {
+      width: 59px !important;
+      height: 59px !important;
+      margin-left: -39px !important;
+      margin-top: -39px !important;
+    }
+  }
+}
+
+.footer {
+  background-color: #161d2e;
+  display: grid;
+  place-content: center;
+  color: #FFF;
+  height: 45px;
 }
