--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -1,3 +1,11 @@
 $font-dm-sans: 'DM Sans', sans-serif;
 $font-inter: 'Inter', sans-serif;
-$font-roboto: 'Roboto', roboto;
+$font-amatic: 'Amatic SC', sans-serif;
+$font-oswald: 'Oswald', sans-serif;
+$font-roboto-mono: 'Roboto Mono', sans-serif;
+$font-bebas: 'Bebas Neue', sans-serif;
+$font-orbitron: 'Orbitron', sans-serif;
+$font-quantico: 'Quantico', sans-serif;
+$font-poppins: 'Poppins', sans-serif;
+$font-combo: 'Combo', sans-serif;
+$font-comforter: 'Comforter', sans-serif;
