--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -9,3 +9,11 @@ $font-quantico: 'Quantico', sans-serif;
 $font-poppins: 'Poppins', sans-serif;
 $font-combo: 'Combo', sans-serif;
 $font-comforter: 'Comforter', sans-serif;
+
+// Breakpoints
+$small: 576px;
+$medium: 768px;
+$large: 992px;
+$extra-large: 1200px;
+$extra-extra-large: 1400px;
+$extra-4k: 2560px;
